# ufbx_write

./: .gitignore  LICENSE  ufbx_write.c  ufbx_write.h
.github/workflows/: ci.yml
extra/: ufbxw_cpp_threads.h  ufbxw_fmtlib.h  ufbxw_libdeflate.h  ufbxw_to_chars.h  ufbxw_zlib.h  ufbxw_zmij.h  ufbxw_zmij_c.h
misc/: check_dataset.py  gen_tokens.py  test_main.cpp  typos.toml  ufbxw.natvis  ufbxwi.natvis
test/: CMakeLists.txt  all_tests.h  main.c  runner.c  test_animation.h  test_basic.h  test_camera.h  test_deflate.h  test_mesh.h  testing_utils.h
test/compare_fbx/: CMakeLists.txt  compare_fbx.cpp  compare_fbx.h
test/deflate_benchmark/: CMakeLists.txt  deflate_benchmark.cpp  ufbx_deflate.c  ufbx_deflate.h
test/extra/: CMakeLists.txt  ufbxw_cpp_threads.cpp  ufbxw_zmij.cpp  ufbxw_zmij_c.c  ufbxwt_extra_deflate.c  ufbxwt_extra_deflate.h
test/roundtrip/: CMakeLists.txt  roundtrip.c
test/test/: CMakeLists.txt  all_tests.h  runner.c  test_animation.h  test_ascii.h  test_binary.h  test_deflate.h  test_errors.h
test/ufbx/: CMakeLists.txt
test/unit/: CMakeLists.txt  unit_atomic.cpp  unit_atomics.cpp  unit_deflate.cpp  unit_main.cpp  unit_mutex.cpp  unit_task_queue.cpp  unit_write_queue.cpp  util_allocator.h  util_task_queue.h  util_threads.h
test/util/: cputime.c  im_arg.h  json_input.c  json_input.h  ufbxwt_util.c  ufbxwt_util.h
